--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb+srv://numan:numan@cluster0.h7yiank.mongodb.net/rolemanagement?retryWrites=true&w=majority
+MONGO_URI=URI
 PORT=5000
-JWT_SECRET_TOKEN=fAWFYIQbi+nAxmjcRBWop4E6iAz2taBslkkReJVD
+JWT_SECRET_TOKEN=Secret Toke
